--- a/relay-clone/relay.html
+++ b/relay-clone/relay.html
@@ -24,61 +24,63 @@
                     <option value="Privacy Policy">Governance</option>
                     <option value="Terms of Service">Help Center</option>
                 </select>
-                <button class="connect-wallet"> Connect </button>
             </div>
+            <button class="connect-wallet"> Connect </button>
         </div>
-        <div class="from-tab">
-            <div class="details">
-                <p class="action">
-                    Sell
-                </p>
-                <button class="wallet">
-                    Select Wallet
-                </button>
-            </div>
-            <div class="token-details">
-                <input class="token-amount" type="number" placeholder="0">
-                <div class="token">
-                    <button class="change-token">
-                        <img class="token-logo" src="https://assets.relay.link/icons/currencies/eth.png">
-                        <div class="token-name-details">
-                            <p class="ticker">ETH</p>
-                            <p class="chain-name">Ethereum</p>
-                        </div>
-                    </button>
 
+        <div class="swap-tab">
+            <div class="from-tab">
+                <div class="details">
+                    <p class="action">
+                        Sell
+                    </p>
+                    <button class="wallet">
+                        Select Wallet
+                    </button>
+                </div>
+                <div class="token-details">
+                    <input class="token-amount" type="number" placeholder="0">
+                    <div class="token">
+                        <button class="change-token">
+                            <img class="token-logo" src="https://assets.relay.link/icons/currencies/eth.png">
+                            <div class="token-name-details">
+                                <p class="ticker">ETH</p>
+                                <p class="chain-name">Ethereum</p>
+                            </div>
+                        </button>
+
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="switch">
-
-        </div>
-
-        <div class="to-tab"> 
-            <div class="details">
-                <p class="action">
-                    Sell
-                </p>
-                <button class="wallet">
-                    Select Wallet
-                </button>
+            <div class="switch">
+                <button class="switch-button"> &#8593; </button>
             </div>
-            <div class="token-details">
-                <input class="token-amount" type="number" placeholder="0">
-                <div class="token">
-                    <button class="change-token">
-                        <img class="token-logo" src="https://coin-images.coingecko.com/coins/images/6319/large/usdc.png?1696506694">
-                        <div class="token-name-details">
-                            <p class="ticker">USDT</p>
-                            <p class="chain-name">Ethereum</p>
-                        </div>
+
+            <div class="to-tab"> 
+                <div class="details">
+                    <p class="action">
+                        Buy
+                    </p>
+                    <button class="wallet">
+                        Select Wallet
                     </button>
-
                 </div>
-            </div>  
+                <div class="token-details">
+                    <input class="token-amount" type="number" placeholder="0">
+                    <div class="token">
+                        <button class="change-token">
+                            <img class="token-logo" src="https://coin-images.coingecko.com/coins/images/6319/large/usdc.png?1696506694">
+                            <div class="token-name-details">
+                                <p class="ticker">USDT</p>
+                                <p class="chain-name">Ethereum</p>
+                            </div>
+                        </button>
 
+                    </div>
+                </div> 
+        </div>
+        <button class="swap-button">Swap</button>
     </div>
-        <button class="swap"></button>
     </body>
 </html>
