--- a/jumper-clone/jumper.html
+++ b/jumper-clone/jumper.html
@@ -29,30 +29,30 @@
                 </button>
             </div>
             <div class="swap-tab">
-                <div class="from-token-tab">
+                <button class="from-token-tab">
                     <p class="from-text"> From </p>
                     <div class="token">
                         <img class="token-image" src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png">
                         <div class="token-details">
-                            <p class="token-name"> ETH </p>
-                            <p class="chain"> Linea </p>
+                            <p class="token-name">ETH</p>
+                            <p class="chain">Linea</p>
                         </div>
                     </div>
-                </div>
+                </button>
 
                 <button class="transfer">
                     <img class="transfer-arrow" src="./arrow-right.png">
                 </button>
-                <div class="to-token-tab">
+                <button class="to-token-tab">
                     <p class="to-text"> To </p>
                     <div class="token">
                         <img class="token-image" src="https://raw.githubusercontent.com/trustwallet/assets/master/blockchains/ethereum/assets/0xdAC17F958D2ee523a2206206994597C13D831ec7/logo.png">
                         <div class="token-details">
-                            <p class="token-name"> ETH </p>
-                            <p class="chain"> Arbitrum </p>
+                            <p class="token-name">ETH</p>
+                            <p class="chain">Arbitrum</p>
                         </div>
                     </div>
-                </div>
+                </button>
             </div>
             <div class="send-tab">
                 <p class="send-text">Send</p>
