--- a/element-clone/element.html
+++ b/element-clone/element.html
@@ -308,6 +308,128 @@
                     </div>
                 </div>
             </div>
+
+            <div class="trending-item">
+                <img class="trending-item-img" src="https://s.nfte.so/asset/collection/featured/73d08044-a9a4-40e1-9151-b40529a5575a.png?x-oss-process=image/resize,m_fill,w_1024,h_684,limit_0,type_6/ignore-error,1">
+                <p class="trending-item-name">Morph Black <span><img class="verified" src="./verified.png"></span></p>
+                <div class="floor-data">
+                    <p class="floor-text" style="margin-left: -50px;
+                    margin-right: 80px;">Floor</p>
+                    <p class="volume-text">Volume</p>
+                    <div class="project-floor" style="margin-left: -50px;
+                    margin-right: 58px;">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        0.75
+                    </div>
+                    <div class="project-vol">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        7.27
+                    </div>
+                </div>
+            </div>
+
+            <div class="trending-item">
+                <img class="trending-item-img" src="https://s.nfte.so/asset/collection/featured/642fd283-1b66-402a-a633-f87fa4d49c7d.png?x-oss-process=image/resize,m_fill,w_1024,h_684,limit_0,type_6/ignore-error,1">
+                <p class="trending-item-name">Quills Adventure <span><img class="verified" src="./verified.png"></span></p>
+                <div class="floor-data">
+                    <p class="floor-text" style="margin-left: -50px;
+                    margin-right: 80px;">Floor</p>
+                    <p class="volume-text">Volume</p>
+                    <div class="project-floor" style="margin-left: -50px;
+                    margin-right: 58px;">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        0.26
+                    </div>
+                    <div class="project-vol">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        4.1
+                    </div>
+                </div>
+            </div>
+
+            <div class="trending-item">
+                <img class="trending-item-img" src="https://s.nfte.so/asset/collection/featured/ddd3fd60-cd61-44d6-86a9-cfea41b800e1.png?x-oss-process=image/resize,m_fill,w_1024,h_684,limit_0,type_6/ignore-error,1">
+                <p class="trending-item-name">Jimmy <span><img class="verified" src="./verified.png"></span></p>
+                <div class="floor-data">
+                    <p class="floor-text" style="margin-left: -50px;
+                    margin-right: 80px;">Floor</p>
+                    <p class="volume-text">Volume</p>
+                    <div class="project-floor" style="margin-left: -50px;
+                    margin-right: 58px;">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        0.022
+                    </div>
+                    <div class="project-vol">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                       `0.35
+                    </div>
+                </div>
+            </div>
+
+            <div class="trending-item">
+                <img class="trending-item-img" src="https://s.nfte.so/asset/collection/featured/ad9d4859-2212-481c-82f3-3eed893cc75b.png?x-oss-process=image/resize,m_fill,w_1024,h_684,limit_0,type_6/ignore-error,1">
+                <p class="trending-item-name">Doodles <span><img class="verified" src="./verified.png"></span></p>
+                <div class="floor-data">
+                    <p class="floor-text" style="margin-left: -50px;
+                    margin-right: 80px;">Floor</p>
+                    <p class="volume-text">Volume</p>
+                    <div class="project-floor" style="margin-left: -50px;
+                    margin-right: 58px;">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        3.01
+                    </div>
+                    <div class="project-vol">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        41.8
+                    </div>
+                </div>
+            </div>
+
+            <div class="trending-item">
+                <img class="trending-item-img" src="https://s.nfte.so/asset/collection/featured/0986fa16-b2c9-42b8-85e5-3a6106a2f462.png?x-oss-process=image/resize,m_fill,w_1024,h_684,limit_0,type_6/ignore-error,1">
+                <p class="trending-item-name">One Gravity <span><img class="verified" src="./verified.png"></span></p>
+                <div class="floor-data">
+                    <p class="floor-text" style="margin-left: -50px;
+                    margin-right: 80px;">Floor</p>
+                    <p class="volume-text">Volume</p>
+                    <div class="project-floor" style="margin-left: -50px;
+                    margin-right: 58px;">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        1.75
+                    </div>
+                    <div class="project-vol">
+                        <img class="token-icon" src="https://s.nfte.so/icon/currency/eth.svg">
+                        5.02
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="support-section">
+            <div class="collection-support">
+                <div class="text-section">
+                    <p class="support-type">Collection Support </p><span class="support-description">
+                        Click here, get a quick collection support. We provide Launchpad, Verified Collection and Verified Creator service.
+                    </span>
+                    <button class="apply-support">
+                        Apply support
+                    </button>
+                </div>
+                <img class="support-image" src="https://static.element.bid/build/img/home-support-1-59ad9d82.svg">
+            </div>
+
+            <div class="collection-support">
+                <div class="text-section">
+                    <p class="support-type">Trading Support</p> <span class="support-description">
+                      Click here, get a quick answer if you have any questions with using Element.
+                    </span>
+                    <button class="apply-support">
+                        Apply support
+                    </button>
+                </div>
+                <img class="support-image" src="https://static.element.bid/build/img/home-support-2-423c04ac.svg">
+            </div>
+
         </div>
     </body>
 </html>
