--- a/element-clone/element.html
+++ b/element-clone/element.html
@@ -429,7 +429,19 @@
                 </div>
                 <img class="support-image" src="https://static.element.bid/build/img/home-support-2-423c04ac.svg">
             </div>
+        </div>
 
+        <div class="footer-section">
+            <div class="partners">
+                <div class="partners-tab">
+                    <img class="partner-logo" src="https://static.element.bid/build/img/invest-Sequoia-f53ffd9a.svg">
+                    <img class="partner-logo" src="https://static.element.bid/build/img/invest-SIG-1cb253b6.svg">
+                    <img class="partner-logo" src="https://static.element.bid/build/img/invest-DragonflyCapital-f69ee85c.svg">
+                    <img class="partner-logo" src="https://static.element.bid/build/img/invest-DragonRoark-1e906368.svg">
+                    <img class="partner-logo" src="https://static.element.bid/build/img/invest-Ince-d05d56dc.svg">
+                </div>
+            </div>
+            <div class="contact-tab"></div>
         </div>
     </body>
 </html>
