--- a/Sworp-landing-page/sworp.html
+++ b/Sworp-landing-page/sworp.html
@@ -59,69 +59,107 @@
             
             <div class="nft-grid">
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #1</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #2</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #3</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #4</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #5</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #6</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #7</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #8</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #9</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #10</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                     <p class="nft-name">Doodles #11</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                        <input class="selector" type="radio">
+                    </label>
+                    <p class="nft-name">Doodles #12</p>
                 </div>
 
                 <div class="nft-card">
-                    <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
-                    <button class="add">
-                    <input type="radio"><img class="add-image" src="./assets/add-token.png"></button>
+                    <label class="select">
+                        <input class="selector" type="radio">
+                        <img class="nft-image" src="https://i.nfte.ai/ia/l1/20032/3745266303445357325_1273990154.avif">
+                    </label>
+                     <p class="nft-name">Doodles #13</p>
                 </div>
             </div>
             <button class="next">
